# ponchik

./: .gitignore  Dockerfile  Dockerfile.fpga  Dockerfile.serving-embeddings  README.md  badge_hook.py  badge_hook_async.py  clusterize.py  download_classifiers.py  download_models.py  export_classifiers.py  export_model.py  fill_meta.py  get_stats.py  image.py  msi_intel.sh  msi_local.sh  precision-recall.ipynb  prepare.py  pull_event_model.py  pull_model.py  realsense2mp4.py  requirements.txt  serving_emb_hook.py  serving_hook.py  setup.cfg  start_serving.sh  streaming.sh  streaming_badge.sh  test_slack_message_server.py  test_slack_send_interactive.py  tflite_converter.py  validate_on_dataset.py  validate_on_lfw.py  video.py
app/badge/: badge_detector.py
app/control/: __init__.py  client.py  listener.py
app/dataset/: __init__.py  aligner.py
app/mlboard/: __init__.py
app/notify/: __init__.py  file.py  print.py  slack.py
app/postprocess/: __init__.py
app/recognize/: __init__.py  classifiers.py  clusterizator.py  defaults.py  detector.py  image.py  track.py  video.py  video_notify.py
app/tools/: __init__.py  bg_remove.py  dataset.py  downloader.py  helpers.py  images.py  lfw.py  sound.py  utils.py
chart/: Chart.yaml  values.yaml
chart/ml-templates/: config.yaml
slack_server/chart/: Chart.yaml  values.yaml
slack_server/server/: server.py  start.sh
src/: download_models.py  prepare.py  video.py
src/control/: client.py
src/dataset/: aligner.py
src/recognize/: args.py  classifiers.py  detector.py  video.py
svod_rcgn/: video.py
(+27 files in other folders)
