[metadata]
name = ponchik
summary = Ponchik person recognition
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = KuberLab
long_description_content_type = text/markdown

[entry_points]
console_scripts =
    svod_train = svod_rcgn.tf_conf:main

[files]
packages =
    svod_rcgn

[nosetests]
cover-package = svod_rcgn

[pbr]
autodoc_index_modules = True
warnerrors = True

[bdist_wheel]
universal=1
